--- a/Admin.html
+++ b/Admin.html
@@ -22,8 +22,8 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Page Password Template">
     <meta property="og:type" content="website">
-  </head>
-  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-1e51"><div class="u-align-left u-clearfix u-sheet u-sheet-1"></div></header>
+  <style id="password-redirect-style">body * { display: none; }</style></head>
+  <body data-home-page="Admin.html" data-salt="2818" data-salted-password="10a9a284ec4b0572842c791a55775525edf5694bc8f2e567c7e99d49da9ecb0b" class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-1e51"><div class="u-align-left u-clearfix u-sheet u-sheet-1"></div></header>
     <section class="u-align-center u-clearfix u-section-1" id="sec-eff3">
       <div class="u-align-left u-clearfix u-sheet u-valign-middle u-sheet-1"><span class="u-icon u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 96.668 96.668" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-b691"></use></svg><svg class="u-svg-content" viewBox="0 0 96.668 96.668" x="0px" y="0px" id="svg-b691" style="enable-background:new 0 0 96.668 96.668;"><g><path d="M80.372,40.605h-5.7V26.338C74.672,11.815,62.856,0,48.334,0C33.811,0,21.996,11.815,21.996,26.338v14.267h-5.7
 		c-1.104,0-2,0.896-2,2v52.063c0,1.104,0.896,2,2,2h64.076c1.104,0,2-0.896,2-2V42.605C82.372,41.5,81.478,40.605,80.372,40.605z
