--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode">
     <section class="u-clearfix u-section-1" id="sec-e80f">
       <img class="u-expanded-width u-image u-image-default u-image-1" src="images/dP81IJq-tGFxy1rIK3RYsg.png" alt="" data-image-width="1400" data-image-height="776">
-      <div class="u-countdown u-countdown-1" data-target-date="Fri, 03 Jun 2022 21:36:35 GMT" data-type="to-date" data-for="per-visitor" data-time-left="5m" data-timer-id="dfea" data-target-number="100" data-direction="down" data-start-time="Thu, 26 May 2022 17:05:32 GMT" data-frequency="10s" data-after-count="redirect" data-redirect-url="https://www.youtube.com/watch?v=Uf89FRDECFc&amp;ab_channel=runterbuff" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction="" data-animation-delay="0" data-animation-out="1">
+      <div class="u-countdown u-countdown-1" data-target-date="Fri, 03 Jun 2022 21:36:35 GMT" data-type="to-date" data-for="per-visitor" data-time-left="5m" data-timer-id="dfea" data-target-number="100" data-direction="down" data-start-time="Thu, 26 May 2022 19:10:58 GMT" data-frequency="10s" data-after-count="message" data-redirect-url="https://www.youtube.com/watch?v=Uf89FRDECFc&amp;ab_channel=runterbuff" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction="" data-animation-delay="0" data-animation-out="1" data-count-animation="slide">
         <div class="u-countdown-wrapper u-spacing-40">
           <div class="u-countdown-item u-countdown-years u-hidden u-spacing-15 u-countdown-item-1">
             <div class="u-countdown-counter u-spacing-2 u-countdown-counter-1"><div class="u-countdown-number">0</div><div class="u-countdown-number u-hidden">0</div></div>
@@ -59,9 +59,11 @@
           </div>
         </div>
         <div class="u-countdown-message u-hidden">
-          <p>Sorry, the time is up.</p>
+          <p>Event Ended.</p>
         </div>
       </div><span class="u-file-icon u-icon u-text-white u-icon-1"><img src="images/5.png" alt=""></span>
+      <a href="Contact.html" data-page-id="291848554" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">Contacts<br>
+      </a>
     </section>
     
     
